--- a/src/Endpoint.Cli/Allagi.Endpoint.Cli.csproj
+++ b/src/Endpoint.Cli/Allagi.Endpoint.Cli.csproj
@@ -11,9 +11,9 @@
     <PackageTags>clean-architecture;code-generator;scaffolding</PackageTags>
     <RepositoryUrl>https://github.com/QuinntyneBrown/Endpoint</RepositoryUrl>
     <RepositoryType>git</RepositoryType>
-    <AssemblyVersion>0.1.13</AssemblyVersion>
-    <FileVersion>0.1.13</FileVersion>
-    <Version>0.1.13</Version>
+    <AssemblyVersion>0.1.14</AssemblyVersion>
+    <FileVersion>0.1.14</FileVersion>
+    <Version>0.1.14</Version>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
     <PackageReadmeFile>README.md</PackageReadmeFile>
 
@@ -31,6 +31,10 @@
     <None Include="..\..\LICENSE.txt">
       <Pack>True</Pack>
       <PackagePath></PackagePath>
+    </None>
+    <None Include="..\..\README.md">
+      <Pack>True</Pack>
+      <PackagePath>\</PackagePath>
     </None>
   </ItemGroup>
 
