--- a/src/Endpoint.Cli/Properties/launchSettings.json
+++ b/src/Endpoint.Cli/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "Endpoint.Cli": {
       "commandName": "Project",
-      "commandLineArgs": "-n TodoApp -r Todo --properties Title:string,IsComplete:bool -m -d C:\\sandbox"
+      "commandLineArgs": "git Pizza C:\\projects\\Pizza"
     }
   }
 } 
