--- a/src/Endpoint.Cli/appsettings.json
+++ b/src/Endpoint.Cli/appsettings.json
@@ -1,4 +1,15 @@
 {
-  "GitHubUsername": "QuinntyneBrown",
-  "GitHubEmail": "quinntynebrown@gmail.com"
+  "Git:GitHubUsername": "QuinntyneBrown",
+  "Git:GitHubEmail": "quinntynebrown@gmail.com",
+  "Default": {
+    "Name": "MyPizzaApp",
+    "Port": 5000,
+    "Properties": "Name:string",
+    "Resurce": "Topping,Special",
+    "IsMinimalApi": true,
+    "ShortIdPropertyName": true,
+    "NumericIdPropertyDataType": true,
+    "StronglyTypedId": false,
+    "Monolith": false
+  }
 }
