--- a/src/Endpoint.Cli/appsettings.json
+++ b/src/Endpoint.Cli/appsettings.json
@@ -5,8 +5,8 @@
     "Name": "MyPizzaApp",
     "Port": 5000,
     "Properties": "Name:string",
-    "Resurce": "Topping,Special",
-    "IsMinimalApi": true,
+    "Resource": "Topping",
+    "Minimal": true,
     "ShortIdPropertyName": true,
     "NumericIdPropertyDataType": true,
     "StronglyTypedId": false,
