--- a/src/Endpoint.Cli/Allagi.Endpoint.Cli.csproj
+++ b/src/Endpoint.Cli/Allagi.Endpoint.Cli.csproj
@@ -47,7 +47,7 @@
 
   <ItemGroup>
     <None Update="appsettings.json">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
   </ItemGroup>
   
