--- a/src/Endpoint.Cli/appsettings.json
+++ b/src/Endpoint.Cli/appsettings.json
@@ -10,6 +10,7 @@
     "ShortIdPropertyName": true,
     "NumericIdPropertyDataType": true,
     "StronglyTypedId": false,
-    "Monolith": false
+    "Monolith": false,
+    "VsCode":  false
   }
 }
