--- a/src/Endpoint.Cli/Allagi.Endpoint.Cli.csproj
+++ b/src/Endpoint.Cli/Allagi.Endpoint.Cli.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFrameworks>net5.0;net6.0</TargetFrameworks>
+    <TargetFrameworks>net6.0</TargetFrameworks>
     <PackAsTool>true</PackAsTool>
     <ToolCommandName>endpoint</ToolCommandName>
     <PackageOutputPath>./nupkg</PackageOutputPath>
@@ -11,9 +11,9 @@
     <PackageTags>clean-architecture;code-generator;scaffolding</PackageTags>
     <RepositoryUrl>https://github.com/QuinntyneBrown/Endpoint</RepositoryUrl>
     <RepositoryType>git</RepositoryType>
-    <AssemblyVersion>0.1.15</AssemblyVersion>
-    <FileVersion>0.1.15</FileVersion>
-    <Version>0.1.15</Version>
+    <AssemblyVersion>0.1.16</AssemblyVersion>
+    <FileVersion>0.1.16</FileVersion>
+    <Version>0.1.16</Version>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
     <PackageReadmeFile>README.md</PackageReadmeFile>
 
