feat: render objects

--- a/src/Endpoint.Core/Endpoint.Core.csproj
+++ b/src/Endpoint.Core/Endpoint.Core.csproj
@@ -86,6 +86,7 @@
 
   <ItemGroup>
     <Folder Include="Parsers\Strategies\" />
+    <Folder Include="Strategies\Common\SettingsModel\" />
   </ItemGroup>
 
 </Project>
