--- a/src/Endpoint.Core/Endpoint.Core.csproj
+++ b/src/Endpoint.Core/Endpoint.Core.csproj
@@ -21,6 +21,7 @@
     <None Remove="Templates\Api\WebApplicationBuilder.txt" />
     <None Remove="Templates\Api\WebApplicationConfiguration.txt" />
     <None Remove="Templates\Application\Dto.txt" />
+    <None Remove="Templates\Domain\Entity.txt" />
     <None Remove="Templates\Global\BicepFile.txt" />
     <None Remove="Templates\Global\DeploySetupFile.txt" />
     <None Remove="Templates\Global\GitIgnoreFile.txt" />
@@ -49,6 +50,7 @@
     <EmbeddedResource Include="Templates\Api\WebApplicationBuilder.txt" />
     <EmbeddedResource Include="Templates\Api\WebApplicationConfiguration.txt" />
     <EmbeddedResource Include="Templates\Application\Dto.txt" />
+    <EmbeddedResource Include="Templates\Domain\Entity.txt" />
     <EmbeddedResource Include="Templates\Global\DeploySetupFile.txt" />
     <EmbeddedResource Include="Templates\Global\BicepFile.txt" />
     <EmbeddedResource Include="Templates\Global\GitIgnoreFile.txt" />
@@ -87,6 +89,8 @@
   <ItemGroup>
     <Folder Include="Parsers\Strategies\" />
     <Folder Include="Strategies\Common\SettingsModel\" />
+    <Folder Include="Strategies\Files\Update\" />
+    <Folder Include="Strategies\Projects\" />
   </ItemGroup>
 
 </Project>
