--- a/src/Endpoint.Infrastructure/Endpoint.Infrastructure.csproj
+++ b/src/Endpoint.Infrastructure/Endpoint.Infrastructure.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="Templates\ArtifactGenerationStrategy.txt" />
     <None Remove="Templates\SyntaxGenerationStrategy.txt" />
     <None Remove="Templates\Verb.txt" />
   </ItemGroup>
@@ -35,6 +36,7 @@
     <EmbeddedResource Include="Templates\IntegrationTests\WebApplicationFactory.txt" />
     <EmbeddedResource Include="Templates\SharedKernel\QueryableExtensions.txt" />
     <EmbeddedResource Include="Templates\SharedKernel\ResponseBase.txt" />
+    <EmbeddedResource Include="Templates\ArtifactGenerationStrategy.txt" />
     <EmbeddedResource Include="Templates\SyntaxGenerationStrategy.txt" />
     <EmbeddedResource Include="Templates\Verb.txt" />
   </ItemGroup>
