--- a/src/Endpoint.Core/Endpoint.Core.csproj
+++ b/src/Endpoint.Core/Endpoint.Core.csproj
@@ -47,4 +47,9 @@
     <PackageReference Include="TextCopy" Version="6.2.1" />
     <PackageReference Include="TinyMapper" Version="3.0.3" />
   </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Models\Syntax\RouteHandlers\Create\" />
+    <Folder Include="Strategies\Workspaces\" />
+  </ItemGroup>
 </Project>
