--- a/src/Endpoint.Infrastructure/Endpoint.Infrastructure.csproj
+++ b/src/Endpoint.Infrastructure/Endpoint.Infrastructure.csproj
@@ -7,8 +7,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <None Remove="Templates\Angular\app.spec.txt" />
-    <None Remove="Templates\Angular\app.txt" />
+    <None Remove="Templates\Angular\app.component.spec.txt" />
+    <None Remove="Templates\Angular\app.component.txt" />
     <None Remove="Templates\Angular\main.txt" />
     <None Remove="Templates\ArtifactGenerationStrategy.txt" />
     <None Remove="Templates\Copyright.txt" />
@@ -17,16 +17,14 @@
   </ItemGroup>
 
   <ItemGroup>
-    <EmbeddedResource Include="Templates\Angular\app.spec.txt" />
-    <EmbeddedResource Include="Templates\Angular\app.txt" />
+    <EmbeddedResource Include="Templates\Angular\app.component.spec.txt" />
+    <EmbeddedResource Include="Templates\Angular\app.component.txt" />
     <EmbeddedResource Include="Templates\Angular\main.txt" />
     <EmbeddedResource Include="Templates\Api\AppSettings.txt" />
-    <EmbeddedResource Include="Templates\Api\Dependencies.txt" />
     <EmbeddedResource Include="Templates\Api\IdFile.txt" />
     <EmbeddedResource Include="Templates\Api\LaunchSettings.txt" />
     <EmbeddedResource Include="Templates\Api\MinimalAppSettings.txt" />
     <EmbeddedResource Include="Templates\Api\Program.txt" />
-    <EmbeddedResource Include="Templates\Api\Startup.txt" />
     <EmbeddedResource Include="Templates\Api\WebApplicationBuilder.txt" />
     <EmbeddedResource Include="Templates\Api\WebApplication.txt" />
     <EmbeddedResource Include="Templates\Application\Dto.txt" />
