--- a/src/Endpoint.Infrastructure/Endpoint.Infrastructure.csproj
+++ b/src/Endpoint.Infrastructure/Endpoint.Infrastructure.csproj
@@ -14,6 +14,7 @@
     <None Remove="Templates\Copyright.txt" />
     <None Remove="Templates\SyntaxGenerationStrategy.txt" />
     <None Remove="Templates\Verb.txt" />
+    <None Remove="Templates\Webpack.Config.txt" />
   </ItemGroup>
 
   <ItemGroup>
@@ -44,6 +45,7 @@
     <EmbeddedResource Include="Templates\ArtifactGenerationStrategy.txt" />
     <EmbeddedResource Include="Templates\SyntaxGenerationStrategy.txt" />
     <EmbeddedResource Include="Templates\Copyright.txt" />
+    <EmbeddedResource Include="Templates\Webpack.Config.txt" />
     <EmbeddedResource Include="Templates\Verb.txt" />
   </ItemGroup>
 
