--- a/src/Endpoint.Core/Endpoint.Core.csproj
+++ b/src/Endpoint.Core/Endpoint.Core.csproj
@@ -59,5 +59,6 @@
     <Folder Include="Messages\" />
     <Folder Include="MessageHandlers\" />
     <Folder Include="Models\WebArtifacts\Commands\" />
+    <Folder Include="ValueObjects\" />
   </ItemGroup>
 </Project>
