--- a/src/Endpoint.Core/Endpoint.Core.csproj
+++ b/src/Endpoint.Core/Endpoint.Core.csproj
@@ -25,7 +25,6 @@
 
   <ItemGroup>
     <PackageReference Include="AutoMapper" Version="12.0.0" />
-    <PackageReference Include="CSharpFunctionalExtensions" Version="2.37.0" />
     <PackageReference Include="DotLiquid" Version="2.2.677" />
     <PackageReference Include="Humanizer.Core" Version="2.14.1" />
     <PackageReference Include="MediatR" Version="11.1.0" />
@@ -52,6 +51,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="Models\Artifacts\Files\Commands\" />
     <Folder Include="Models\Artifacts\Projects\Commands\" />
     <Folder Include="Models\Syntax\Methods\ControllerMethods\" />
     <Folder Include="Models\Syntax\Microservices\" />
@@ -59,6 +59,5 @@
     <Folder Include="Messages\" />
     <Folder Include="MessageHandlers\" />
     <Folder Include="Models\WebArtifacts\Commands\" />
-    <Folder Include="ValueObjects\" />
   </ItemGroup>
 </Project>
