--- a/src/Endpoint.Core/Endpoint.Core.csproj
+++ b/src/Endpoint.Core/Endpoint.Core.csproj
@@ -52,6 +52,7 @@
 
   <ItemGroup>
     <Folder Include="Models\Artifacts\Files\Commands\" />
+    <Folder Include="Models\Artifacts\Files\Services\" />
     <Folder Include="Models\Artifacts\Projects\Commands\" />
     <Folder Include="Models\Syntax\Methods\ControllerMethods\" />
     <Folder Include="Models\Syntax\Microservices\" />
